Update chabot generation logic